syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.ea.restaurant.grpc";

message FindUserByIdRequest{
  int64 id =1;
}

message GrpcUser{
  int64 id = 1;
  string name = 2;
  string lastName = 3;
  string username = 4;
  string password = 5;
  string roles = 6;
  string type = 7;
  string entityStatus = 8;
  int64 createdBy = 9;
  int64 updatedBy = 10;
}

service UserService{
  rpc findUserById(FindUserByIdRequest) returns(GrpcUser){}
}
